# mysql-sync

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.go  LICENSE  bbb  binlogentry.explan.sql  binlogentry_statistics.sh  build.docker.sh  build.go.sh  build.prod.sh  build.sh  build.testing.sh  build_testing.sh  canal.go  ckpt.gtidset.json  ckpt.logposition.txt  client.go  coltype.md  config.go  config.yml  data.sql  dataype.golang.md  dispatcher.go  docker-compose.yml  document.link.md  entrypoint.sh  generate_sql_statements.py  go.mod  go.sum  gocopy.mod  initContainer.bash.sh  initContainer.c.sh  initContainer.deno.sh  initContainer.go.sh  initContainer.py.sh  initContainer.rust.sh  initContainer.sh  initPython.sh  main  (+36 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  initContainer.centos.sh
.devcontainer3/: Dockerfile
.github/: dependabot.yml
.zed/: settings.json
binlog/: all_datatype.sql  from-mysql-bin.000005.sql  from-mysql-bin.000009.sql  mysql-bin.8.0.34-26.sql  showbinlog.txt  test.sql
canal/: canal.go  handler.go  sync.go
deploy/: config.yml  docker-compose.yml  main.py  readme.md
example/: altermanager.yml  config.yml  docker-compose.yml  prom-alert.yml  prometheus.yml
grafana/: d.json
labs/: a.go  b.go  binlog.go  binlog2.go  binlog3.go  c.go  c_split.c  chan.go  client.go  compare_gtid.py  config.json  config.yml  d.go  dbtime.go  empty_trx.py  flow.go  kafka_producer.c  kafka_producer.py  kill.sh  main_client.go  main_server.go  mysql_set.rs  nextline.rs  nonpeekable.rs  parallel_rs.py  parse.go  peekable.rs  peekable2.rs  (+17 more)
(+80 files in other folders)
